--- a/app/index.html
+++ b/app/index.html
@@ -256,17 +256,17 @@
             </div>
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-item">
-                <img src="img/Surf.svg" alt="">
+                <img src="img/sport/Surf.svg" alt="">
                 <div class="slider-dots__content-number">3-11</div>
                 <div class="slider-dots__content-name">Surf (FT)</div>
               </div>
               <div class="slider-dots__content-item">
-                <img src="img/Water.svg" alt="">
+                <img src="img/sport/Water.svg" alt="">
                 <div class="slider-dots__content-number">+ 3.3</div>
                 <div class="slider-dots__content-name">Tide (FT)</div>
               </div>
               <div class="slider-dots__content-item">
-                <img src="img/Wind.svg" alt="">
+                <img src="img/sport/Wind.svg" alt="">
                 <div class="slider-dots__content-number">4 SE</div>
                 <div class="slider-dots__content-name">Wind (KTS)</div>
               </div>
@@ -285,17 +285,17 @@
             </div>
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-item">
-                <img src="img/Surf.svg" alt="">
+                <img src="img/sport/Surf.svg" alt="">
                 <div class="slider-dots__content-number">1-3</div>
                 <div class="slider-dots__content-name">Surf (FT)</div>
               </div>
               <div class="slider-dots__content-item">
-                <img src="img/Water.svg" alt="">
+                <img src="img/sport/Water.svg" alt="">
                 <div class="slider-dots__content-number">+ 2.1</div>
                 <div class="slider-dots__content-name">Tide (FT)</div>
               </div>
               <div class="slider-dots__content-item">
-                <img src="img/Wind.svg" alt="">
+                <img src="img/sport/Wind.svg" alt="">
                 <div class="slider-dots__content-number">3 SE</div>
                 <div class="slider-dots__content-name">Wind (KTS)</div>
               </div>
@@ -315,17 +315,17 @@
             </div>
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-item">
-                <img src="img/Surf.svg" alt="">
+                <img src="img/sport/Surf.svg" alt="">
                 <div class="slider-dots__content-number">1-7</div>
                 <div class="slider-dots__content-name">Surf (FT)</div>
               </div>
               <div class="slider-dots__content-item">
-                <img src="img/Water.svg" alt="">
+                <img src="img/sport/Water.svg" alt="">
                 <div class="slider-dots__content-number">+ 2.7</div>
                 <div class="slider-dots__content-name">Tide (FT)</div>
               </div>
               <div class="slider-dots__content-item">
-                <img src="img/Wind.svg" alt="">
+                <img src="img/sport/Wind.svg" alt="">
                 <div class="slider-dots__content-number">3 SE</div>
                 <div class="slider-dots__content-name">Wind (KTS)</div>
               </div>
@@ -344,17 +344,17 @@
             </div>
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-item">
-                <img src="img/Surf.svg" alt="">
+                <img src="img/sport/Surf.svg" alt="">
                 <div class="slider-dots__content-number">3-11</div>
                 <div class="slider-dots__content-name">Surf (FT)</div>
               </div>
               <div class="slider-dots__content-item">
-                <img src="img/Water.svg" alt="">
+                <img src="img/sport/Water.svg" alt="">
                 <div class="slider-dots__content-number">+ 2.1</div>
                 <div class="slider-dots__content-name">Tide (FT)</div>
               </div>
               <div class="slider-dots__content-item">
-                <img src="img/Wind.svg" alt="">
+                <img src="img/sport/Wind.svg" alt="">
                 <div class="slider-dots__content-number">2 SE</div>
                 <div class="slider-dots__content-name">Wind (KTS)</div>
               </div>
@@ -373,17 +373,17 @@
             </div>
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-item">
-                <img src="img/Surf.svg" alt="">
+                <img src="img/sport/Surf.svg" alt="">
                 <div class="slider-dots__content-number">1-7</div>
                 <div class="slider-dots__content-name">Surf (FT)</div>
               </div>
               <div class="slider-dots__content-item">
-                <img src="img/Water.svg" alt="">
+                <img src="img/sport/Water.svg" alt="">
                 <div class="slider-dots__content-number">+ 1.9</div>
                 <div class="slider-dots__content-name">Tide (FT)</div>
               </div>
               <div class="slider-dots__content-item">
-                <img src="img/Wind.svg" alt="">
+                <img src="img/sport/Wind.svg" alt="">
                 <div class="slider-dots__content-number">2 SE</div>
                 <div class="slider-dots__content-name">Wind (KTS)</div>
               </div>
@@ -402,17 +402,17 @@
             </div>
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-item">
-                <img src="img/Surf.svg" alt="">
+                <img src="img/sport/Surf.svg" alt="">
                 <div class="slider-dots__content-number">2-9</div>
                 <div class="slider-dots__content-name">Surf (FT)</div>
               </div>
               <div class="slider-dots__content-item">
-                <img src="img/Water.svg" alt="">
+                <img src="img/sport/Water.svg" alt="">
                 <div class="slider-dots__content-number">+ 2.3</div>
                 <div class="slider-dots__content-name">Tide (FT)</div>
               </div>
               <div class="slider-dots__content-item">
-                <img src="img/Wind.svg" alt="">
+                <img src="img/sport/Wind.svg" alt="">
                 <div class="slider-dots__content-number">5 SE</div>
                 <div class="slider-dots__content-name">Wind (KTS)</div>
               </div>
@@ -431,17 +431,17 @@
             </div>
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-item">
-                <img src="img/Surf.svg" alt="">
+                <img src="img/sport/Surf.svg" alt="">
                 <div class="slider-dots__content-number">3-9</div>
                 <div class="slider-dots__content-name">Surf (FT)</div>
               </div>
               <div class="slider-dots__content-item">
-                <img src="img/Water.svg" alt="">
+                <img src="img/sport/Water.svg" alt="">
                 <div class="slider-dots__content-number">+ 2.7</div>
                 <div class="slider-dots__content-name">Tide (FT)</div>
               </div>
               <div class="slider-dots__content-item">
-                <img src="img/Wind.svg" alt="">
+                <img src="img/sport/Wind.svg" alt="">
                 <div class="slider-dots__content-number">1 SE</div>
                 <div class="slider-dots__content-name">Wind (KTS)</div>
               </div>
@@ -460,17 +460,17 @@
             </div>
             <div class="slider-dots__content-row">
               <div class="slider-dots__content-item">
-                <img src="img/Surf.svg" alt="">
+                <img src="img/sport/Surf.svg" alt="">
                 <div class="slider-dots__content-number">1-3</div>
                 <div class="slider-dots__content-name">Surf (FT)</div>
               </div>
               <div class="slider-dots__content-item">
-                <img src="img/Water.svg" alt="">
+                <img src="img/sport/Water.svg" alt="">
                 <div class="slider-dots__content-number">+ 3.4</div>
                 <div class="slider-dots__content-name">Tide (FT)</div>
               </div>
               <div class="slider-dots__content-item">
-                <img src="img/Wind.svg" alt="">
+                <img src="img/sport/Wind.svg" alt="">
                 <div class="slider-dots__content-number">2 SE</div>
                 <div class="slider-dots__content-name">Wind (KTS)</div>
               </div>
@@ -480,7 +480,7 @@
       </div>
       <div class="sport-slider">
         <div class="sport-box">
-          <div class="sport-box__wrapper" style="background-image: url(img/sport-1.jpeg);">
+          <div class="sport-box__wrapper" style="background-image: url(img/sport/sport-1.jpeg);">
           <div class="sport-box__inner"> 
             <div class="sport-box__inner-title">Windsurfing</div>
             <div class="sport-box__inner-title-location">Whitehaven Beach <span>|</span> Australia</div>
@@ -493,7 +493,7 @@
         </div>
         </div>
         <div class="sport-box">
-          <div class="sport-box__wrapper" style="background-image: url(img/sport-2.jpeg);">
+          <div class="sport-box__wrapper" style="background-image: url(img/sport/sport-2.jpeg);">
           <div class="sport-box__inner">
             <div class="sport-box__inner-title">Kayaking</div>
             <div class="sport-box__inner-title-location">Las Salinas <span>|</span> Spain </div>
@@ -506,7 +506,7 @@
         </div>
         </div>
         <div class="sport-box">
-          <div class="sport-box__wrapper" style="background-image: url(img/sport-3.jpeg);">
+          <div class="sport-box__wrapper" style="background-image: url(img/sport/sport-3.jpeg);">
           <div class="sport-box__inner">
             <div class="sport-box__inner-title">Diving</div>
             <div class="sport-box__inner-title-location">Pink Sands Beach <span>|</span> Bahamas</div>
@@ -520,7 +520,7 @@
         </div>
         <div class="sport-box">
 
-        <div class="sport-box__wrapper" style="background-image: url(img/sport-4.jpg);">
+        <div class="sport-box__wrapper" style="background-image: url(img/sport/sport-4.jpg);">
          <div class="sport-box__inner">
             <div class="sport-box__inner-title">Surfing</div>
             <div class="sport-box__inner-title-location">South Beach <span>|</span> Miami</div>
@@ -533,7 +533,7 @@
         </div> 
         </div>
         <div class="sport-box">
-          <div class="sport-box__wrapper" style="background-image: url(img/sport-5.jpeg);">
+          <div class="sport-box__wrapper" style="background-image: url(img/sport/sport-5.jpeg);">
           <div class="sport-box__inner">
             <div class="sport-box__inner-title">Flyboarding</div>
             <div class="sport-box__inner-title-location">Copacabana <span>|</span> Brazil</div>
@@ -546,7 +546,7 @@
         </div>
         </div>
         <div class="sport-box">
-          <div class="sport-box__wrapper" style="background-image: url(img/sport-6.jpeg);">
+          <div class="sport-box__wrapper" style="background-image: url(img/sport/sport-6.jpeg);">
           <div class="sport-box__inner">
             <div class="sport-box__inner-title">Wakeskating</div>
             <div class="sport-box__inner-title-location">Varadero <span>|</span> Cuba</div>
@@ -559,7 +559,7 @@
         </div>
         </div>
         <div class="sport-box">
-          <div class="sport-box__wrapper" style="background-image: url(img/sport-7.jpg);"> 
+          <div class="sport-box__wrapper" style="background-image: url(img/sport/sport-7.jpg);"> 
            <div class="sport-box__inner">
             <div class="sport-box__inner-title">Snorkeling</div>
             <div class="sport-box__inner-title-location">Lombok <span>|</span> Indonesia</div>
@@ -572,7 +572,7 @@
         </div>
         </div>
         <div class="sport-box">
-          <div class="sport-box__wrapper" style="background-image: url(img/sport-8.jpeg);">
+          <div class="sport-box__wrapper" style="background-image: url(img/sport/sport-8.jpeg);">
           <div class="sport-box__inner">
             <div class="sport-box__inner-title">Sup Boarding</div>
             <div class="sport-box__inner-title-location">Wakaya <span>|</span> Fiji</div>
@@ -605,28 +605,28 @@
     </div>
     <div class="travel-grid">
       <a href="australia.html" class="wrap-item">
-        <div class="travel-grid__item" style="background-image: url(img/travel-bg.png)"> <span>Australia</span> </div>
+        <div class="travel-grid__item" style="background-image: url(img/travel/travel-bg.png)"> <span>Australia</span> </div>
       </a>
       <a href="spain.html" class="wrap-item">
-        <div class="travel-grid__item" style="background-image: url(img/travel-bg1.png)"> <span>Spain</span> </div>
+        <div class="travel-grid__item" style="background-image: url(img/travel/travel-bg1.png)"> <span>Spain</span> </div>
       </a>
       <a href="bahamas.html" class="wrap-item">
-        <div class="travel-grid__item" style="background-image: url(img/travel-bg2.png)"> <span>Bahamas</span> </div>
+        <div class="travel-grid__item" style="background-image: url(img/travel/travel-bg2.png)"> <span>Bahamas</span> </div>
       </a>
       <a href="miami.html" class="wrap-item">
-        <div class="travel-grid__item" style="background-image: url(img/travel-bg3.png)"> <span>Miami</span> </div>
+        <div class="travel-grid__item" style="background-image: url(img/travel/travel-bg3.png)"> <span>Miami</span> </div>
       </a>
       <a href="brazil.html" class="wrap-item">
-        <div class="travel-grid__item" style="background-image: url(img/travel-bg4.png)"> <span> Brazil</span> </div>
+        <div class="travel-grid__item" style="background-image: url(img/travel/travel-bg4.png)"> <span> Brazil</span> </div>
       </a>
       <a href="cuba.html" class="wrap-item">
-        <div class="travel-grid__item" style="background-image: url(img/travel-bg5.png)"> <span>Cuba</span> </div>
+        <div class="travel-grid__item" style="background-image: url(img/travel/travel-bg5.png)"> <span>Cuba</span> </div>
       </a>
       <a href="indonesia.html" class="wrap-item">
-        <div class="travel-grid__item" style="background-image: url(img/travel-bg6.png)"> <span>Indonesia</span> </div>
+        <div class="travel-grid__item" style="background-image: url(img/travel/travel-bg6.png)"> <span>Indonesia</span> </div>
       </a>
       <a href="fiji.html" class="wrap-item">
-        <div class="travel-grid__item" style="background-image: url(img/travel-bg7.png)"> <span>Fiji</span> </div>
+        <div class="travel-grid__item" style="background-image: url(img/travel/travel-bg7.png)"> <span>Fiji</span> </div>
       </a>
     </div>
     <div class="travel__slider">
