--- a/app/fiji.html
+++ b/app/fiji.html
@@ -227,6 +227,7 @@
         <div class="quantity">
           <input class="night" type="number" min="1" max="20" step="1" value="7">
         </div>nocy</div>
+        <div class="slider-dots__clicks">kliknij</div>
     </div>
     <div class="relax-slider__info-item wow fadeInUp" data-wow-offset="100" data-wow-delay=".7s">
       <div class="relax-slider__info-subtitle">liczba Gości</div>
