--- a/app/cuba.html
+++ b/app/cuba.html
@@ -216,7 +216,7 @@
   <div class="relax-slider__info">
     <div class="relax-slider__info-item wow fadeInUp" data-wow-offset="100" data-wow-delay=".3s">
       <div class="relax-slider__info-subtitle">Resort</div>
-      <div class="relax-slider__info-title">The Savoy Hotel</div>
+      <div class="relax-slider__info-title">RADISUS RÍO DE ORO</div>
     </div>
     <div class="relax-slider__info-item wow fadeInUp" data-wow-offset="100" data-wow-delay=".5s">
       <div class="relax-slider__info-subtitle">Liczba nocy</div>
