--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,13 @@
 
 <body>
   <!-- HEADER -->
+  <div class="preloader">
+    <img class="plane" src="img/plane.png" alt="">
+    <h3>Landing on the website...</h3>
+    <img class="cloud1" src="img/cloud.png" alt="">
+    <img class="cloud2" src="img/cloud.png" alt="">
+    <img class="cloud3" src="img/cloud.png" alt="">
+  </div>
   <header class="header">
     <div class="header-wrap">
       <div class="header-wrap__body">
@@ -1493,6 +1500,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/libs.min.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/loader.js"></script>
 
 </body>
 
