--- a/app/about.html
+++ b/app/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,150 +9,178 @@
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:100,300,400,500,800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
+
 <body>
-    <div class="header-wrap">
-        <div class="header-wrap__body">
-            <div class="logo">
-                <a href="index.html">
-                    <img src="img/footer/logofooter.png" alt="">
-                </a>
-            </div>
-            <div class="header__item">
-              <a href="index.html">
-                <span>Home</span>
-              </a>
-              <a href="contact.html">
-                <span>Kontakt</span>
-              </a>
-            </div>
-            <div class="header__burger">
-                <span></span>
-            </div>
-            <nav class="header__menu">
-                <ul class="header__list">
-                    <li>
-                        <a href="about.html" class="list-item">
-                        <span>O firmie</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="index.html#Sport" class="list-item">
-                        <span>Sport</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="index.html#Travel" class="list-item">
-                        <span>Podróż</span>
-                        </a>
-                        <ul class="sub-header__list">
-                          <li>
-                            <a href="australia.html" class="sub-list-item">
-                              Australia
-                            </a>
-                          </li>
-                          <li>
-                            <a href="spain.html" class="sub-list-item">
-                              Spain
-                            </a>
-                          </li>
-                          <li>
-                            <a href="bahamas.html" class="sub-list-item">
-                              Bahamas
-                            </a>
-                          </li>
-                          <li>
-                            <a href="miami.html" class="sub-list-item">
-                              Miami
-                            </a>
-                          </li>
-                          <li>
-                            <a href="brazil.html" class="sub-list-item">
-                              Brazil
-                            </a>
-                          </li>
-                          <li>
-                            <a href="cuba.html" class="sub-list-item">
-                              Cuba
-                            </a>
-                          </li>
-                          <li>
-                            <a href="indonesia.html" class="sub-list-item">
-                              Indonesia
-                            </a>
-                          </li>
-                          <li>
-                            <a href="fiji.html" class="sub-list-item">
-                              Fiji
-                            </a>
-                          </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="index.html#Shop" class="list-item">
-                        <span>Sklep</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="contact.html" class="list-item">
-                        <span>Kontakt</span>
-                        </a>
-                    </li>
-                    <div class="header__location">
-                      wrocław
-                    </div>
-                </ul>
-            </nav>
-        </div>
-    </div>
-    <div class="wrapper">
-        <div class="page">
-            <div class="parallax">
-                <div class="parallax__aqua parallax__aqua__1"></div>
-                <div class="parallax__aqua parallax__aqua__2"></div>
-                <div class="parallax__aqua parallax__aqua__3 animated flash infinite slower"></div>
-                <div class="parallax__fog"></div>
-            </div>
-            <div class="content">
-            <div class="content__body">
-                <div class="content__header">
-                  <h1 class="content__title">biuro podróży</h1>
-                  <h2 class="content__subtitle">TWOJE WAKACJE NA NAJLEPSZYCH PLAŻACH ŚWIATA</h2>
-                </div>
-                <div class="content__article">            
-                <p>
-                  Jesteśmy Biurem współpracującym jedynie z najlepszymi organizatorami, którzy są w stanie zagwarantować Państwu prawdziwie udane wakacje. To na nas spoczywa obowiązek ciągłego sprawdzania i monitorowania działalności poszczególnych organizatorów, tak, aby byli Państwo w pełni zadowoleni z jakości usług, jakie oferują. Nie byłoby to możliwe, gdyby nie nasze wieloletnie doświadczenie w branży turystycznej, które stawia nas na pozycji partnera, a nie zwykłego pośrednika. Zawsze służymy radą, fachową i rzetelną pomocą w wyborze wymarzonego kierunku wakacyjnego oraz dołoży wszelkich starań, aby wakacje były prawdziwie udane i stanowiły przez długi czas jedno z najpiękniejszych wspomnień.  
-                </p>
-                  <br>
-                <p>
-                  Jesteśmy przede wszystkim Biurem stacjonarnym, które daje możliwość realnego spotkania się z profesjonalnymi doradcami. Już od wejścia możesz poczuć atmosferę podróży. To właśnie tutaj przygotowujemy dla Ciebie optymalnie dopasowaną ofertę podróży, która spełni oczekiwania najbardziej wymagającego podróżnika. W naszym salonie podróży nie znajdziesz rzędu stanowisk z „anonimową” obsługą, nie znajdziesz też telefonicznych konsultantów zamkniętych w boksach, bo każdego klienta traktujemy indywidualnie.
-                  Jeżeli potrzebujesz pomocy naszego doradcy w przygotowaniu oferty dla firmy, chcesz dokładnie i profesjonalnie przedstawić grupie szczegóły oferty wyjazdów szkoleniowych czy integracyjnych, wystarczy, że wybierzesz dogodny dla Ciebie termin.
-                </p>
-                  <br>
-                <p>
-                  Współpracujemy tylko z firmami, które posiadają doświadczenie w turystyce, znającymi wysokie wymagania i rosnące potrzeby klientów. Przy wyborze partnerów zawsze kierujemy się dobrem naszych klientów, przykładając szczególną wagę do jakości oferowanego produktu, różnorodności oferty, dostępności miejsc w samolotach, wymaganych prawem dokumentów, wysokości kapitału i zabezpieczenia finansowego. Równie ważnym czynnikiem są pracownicy organizatora, a w szczególności osoby, które podczas podróży są za Państwa bezpośrednio odpowiedzialne.
-                  Tylko tacy organizatorzy są w stanie zapewnić naszym wspólnym klientom prawdziwie udane, wymarzone wakacje.
-                </p>
-                </div>
-            </div>
-           <!-- Footer -->
-   <footer class="footer" id="footer">
-    <div class="footer-item">
-      <a href="contact.html">Kontakt</a>
-      <a href="about.html">O firmie</a>
-    </div>
-      <div class="footer__cop">
-        © 2020 travel shore biuro podróży
+  <div class="preloader">
+    <img class="plane" src="img/plane.png" alt="">
+    <h3>Landing on the website...</h3>
+    <img class="cloud1" src="img/cloud.png" alt="">
+    <img class="cloud2" src="img/cloud.png" alt="">
+    <img class="cloud3" src="img/cloud.png" alt="">
+  </div>
+  <div class="header-wrap">
+    <div class="header-wrap__body">
+      <div class="logo">
+        <a href="index.html">
+          <img src="img/footer/logofooter.png" alt="">
+        </a>
       </div>
-        <a href="index.html"><img src="img/footer/logofooter.png" alt=""></a>
-  </footer>
-  <!-- Footer -->
-            </div>
-        </div>
+      <div class="header__item">
+        <a href="index.html">
+          <span>Home</span>
+        </a>
+        <a href="contact.html">
+          <span>Kontakt</span>
+        </a>
+      </div>
+      <div class="header__burger">
+        <span></span>
+      </div>
+      <nav class="header__menu">
+        <ul class="header__list">
+          <li>
+            <a href="about.html" class="list-item">
+              <span>O firmie</span>
+            </a>
+          </li>
+          <li>
+            <a href="index.html#Sport" class="list-item">
+              <span>Sport</span>
+            </a>
+          </li>
+          <li>
+            <a href="index.html#Travel" class="list-item">
+              <span>Podróż</span>
+            </a>
+            <ul class="sub-header__list">
+              <li>
+                <a href="australia.html" class="sub-list-item">
+                  Australia
+                </a>
+              </li>
+              <li>
+                <a href="spain.html" class="sub-list-item">
+                  Spain
+                </a>
+              </li>
+              <li>
+                <a href="bahamas.html" class="sub-list-item">
+                  Bahamas
+                </a>
+              </li>
+              <li>
+                <a href="miami.html" class="sub-list-item">
+                  Miami
+                </a>
+              </li>
+              <li>
+                <a href="brazil.html" class="sub-list-item">
+                  Brazil
+                </a>
+              </li>
+              <li>
+                <a href="cuba.html" class="sub-list-item">
+                  Cuba
+                </a>
+              </li>
+              <li>
+                <a href="indonesia.html" class="sub-list-item">
+                  Indonesia
+                </a>
+              </li>
+              <li>
+                <a href="fiji.html" class="sub-list-item">
+                  Fiji
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="index.html#Shop" class="list-item">
+              <span>Sklep</span>
+            </a>
+          </li>
+          <li>
+            <a href="contact.html" class="list-item">
+              <span>Kontakt</span>
+            </a>
+          </li>
+          <div class="header__location">
+            wrocław
+          </div>
+        </ul>
+      </nav>
     </div>
+  </div>
+  <div class="wrapper">
+    <div class="page">
+      <div class="parallax">
+        <div class="parallax__aqua parallax__aqua__1"></div>
+        <div class="parallax__aqua parallax__aqua__2"></div>
+        <div class="parallax__aqua parallax__aqua__3 animated flash infinite slower"></div>
+        <div class="parallax__fog"></div>
+      </div>
+      <div class="content">
+        <div class="content__body">
+          <div class="content__header">
+            <h1 class="content__title">biuro podróży</h1>
+            <h2 class="content__subtitle">TWOJE WAKACJE NA NAJLEPSZYCH PLAŻACH ŚWIATA</h2>
+          </div>
+          <div class="content__article">
+            <p>
+              Jesteśmy Biurem współpracującym jedynie z najlepszymi organizatorami, którzy są w stanie zagwarantować
+              Państwu prawdziwie udane wakacje. To na nas spoczywa obowiązek ciągłego sprawdzania i monitorowania
+              działalności poszczególnych organizatorów, tak, aby byli Państwo w pełni zadowoleni z jakości usług, jakie
+              oferują. Nie byłoby to możliwe, gdyby nie nasze wieloletnie doświadczenie w branży turystycznej, które
+              stawia nas na pozycji partnera, a nie zwykłego pośrednika. Zawsze służymy radą, fachową i rzetelną pomocą
+              w wyborze wymarzonego kierunku wakacyjnego oraz dołoży wszelkich starań, aby wakacje były prawdziwie udane
+              i stanowiły przez długi czas jedno z najpiękniejszych wspomnień.
+            </p>
+            <br>
+            <p>
+              Jesteśmy przede wszystkim Biurem stacjonarnym, które daje możliwość realnego spotkania się z
+              profesjonalnymi doradcami. Już od wejścia możesz poczuć atmosferę podróży. To właśnie tutaj przygotowujemy
+              dla Ciebie optymalnie dopasowaną ofertę podróży, która spełni oczekiwania najbardziej wymagającego
+              podróżnika. W naszym salonie podróży nie znajdziesz rzędu stanowisk z „anonimową” obsługą, nie znajdziesz
+              też telefonicznych konsultantów zamkniętych w boksach, bo każdego klienta traktujemy indywidualnie.
+              Jeżeli potrzebujesz pomocy naszego doradcy w przygotowaniu oferty dla firmy, chcesz dokładnie i
+              profesjonalnie przedstawić grupie szczegóły oferty wyjazdów szkoleniowych czy integracyjnych, wystarczy,
+              że wybierzesz dogodny dla Ciebie termin.
+            </p>
+            <br>
+            <p>
+              Współpracujemy tylko z firmami, które posiadają doświadczenie w turystyce, znającymi wysokie wymagania i
+              rosnące potrzeby klientów. Przy wyborze partnerów zawsze kierujemy się dobrem naszych klientów,
+              przykładając szczególną wagę do jakości oferowanego produktu, różnorodności oferty, dostępności miejsc w
+              samolotach, wymaganych prawem dokumentów, wysokości kapitału i zabezpieczenia finansowego. Równie ważnym
+              czynnikiem są pracownicy organizatora, a w szczególności osoby, które podczas podróży są za Państwa
+              bezpośrednio odpowiedzialne.
+              Tylko tacy organizatorzy są w stanie zapewnić naszym wspólnym klientom prawdziwie udane, wymarzone
+              wakacje.
+            </p>
+          </div>
+        </div>
+        <!-- Footer -->
+        <footer class="footer" id="footer">
+          <div class="footer-item">
+            <a href="contact.html">Kontakt</a>
+            <a href="about.html">O firmie</a>
+          </div>
+          <div class="footer__cop">
+            © 2020 travel shore biuro podróży
+          </div>
+          <a href="index.html"><img src="img/footer/logofooter.png" alt=""></a>
+        </footer>
+        <!-- Footer -->
+      </div>
+    </div>
+  </div>
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="js/libs.min.js"></script>
-<script src="js/main.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="js/libs.min.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/loader.js"></script>
 </body>
+
 </html>
