--- a/app/contact.html
+++ b/app/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,15 +9,23 @@
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:100,300,400,500,800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
+
 <body>
-    <!-- menu -->
-<section class="contact">
+  <!-- menu -->
+  <div class="preloader">
+    <img class="plane" src="img/plane.png" alt="">
+    <h3>Landing on the website...</h3>
+    <img class="cloud1" src="img/cloud.png" alt="">
+    <img class="cloud2" src="img/cloud.png" alt="">
+    <img class="cloud3" src="img/cloud.png" alt="">
+  </div>
+  <section class="contact">
     <div class="header-wrap">
       <div class="header-wrap__body">
         <div class="logo">
-            <a href="index.html">
-                <img src="img/footer/logofooter.png" alt="">
-            </a>
+          <a href="index.html">
+            <img src="img/footer/logofooter.png" alt="">
+          </a>
         </div>
         <div class="header__item">
           <a href="index.html">
@@ -30,163 +39,165 @@
           </a>
         </div>
         <div class="header__burger">
-            <span></span>
+          <span></span>
         </div>
         <nav class="header__menu">
           <ul class="header__list">
-              <li>
-                  <a href="about.html" class="list-item">
-                  <span>O firmie</span>
+            <li>
+              <a href="about.html" class="list-item">
+                <span>O firmie</span>
+              </a>
+            </li>
+            <li>
+              <a href="index.html#Sport" class="list-item">
+                <span>Sport</span>
+              </a>
+            </li>
+            <li>
+              <a href="index.html#Travel" class="list-item">
+                <span>Podróż</span>
+              </a>
+              <ul class="sub-header__list">
+                <li>
+                  <a href="australia.html" class="sub-list-item">
+                    Australia
                   </a>
-              </li>
-              <li>
-                  <a href="index.html#Sport" class="list-item">
-                  <span>Sport</span>
+                </li>
+                <li>
+                  <a href="spain.html" class="sub-list-item">
+                    Spain
                   </a>
-              </li>
-              <li>
-                  <a href="index.html#Travel" class="list-item">
-                  <span>Podróż</span>
+                </li>
+                <li>
+                  <a href="bahamas.html" class="sub-list-item">
+                    Bahamas
                   </a>
-                  <ul class="sub-header__list">
-                    <li>
-                      <a href="australia.html" class="sub-list-item">
-                        Australia
-                      </a>
-                    </li>
-                    <li>
-                      <a href="spain.html" class="sub-list-item">
-                        Spain
-                      </a>
-                    </li>
-                    <li>
-                      <a href="bahamas.html" class="sub-list-item">
-                        Bahamas
-                      </a>
-                    </li>
-                    <li>
-                      <a href="miami.html" class="sub-list-item">
-                        Miami
-                      </a>
-                    </li>
-                    <li>
-                      <a href="brazil.html" class="sub-list-item">
-                        Brazil
-                      </a>
-                    </li>
-                    <li>
-                      <a href="cuba.html" class="sub-list-item">
-                        Cuba
-                      </a>
-                    </li>
-                    <li>
-                      <a href="indonesia.html" class="sub-list-item">
-                        Indonesia
-                      </a>
-                    </li>
-                    <li>
-                      <a href="fiji.html" class="sub-list-item">
-                        Fiji
-                      </a>
-                    </li>
-                  </ul>
-              </li>
-              <li>
-                  <a href="index.html#Shop" class="list-item">
-                  <span>Sklep</span>
+                </li>
+                <li>
+                  <a href="miami.html" class="sub-list-item">
+                    Miami
                   </a>
-              </li>
-              <li>
-                  <a href="contact.html" class="list-item">
-                  <span>Kontakt</span>
+                </li>
+                <li>
+                  <a href="brazil.html" class="sub-list-item">
+                    Brazil
                   </a>
-              </li>
-              <div class="header__location">
-                wrocław
-              </div>
+                </li>
+                <li>
+                  <a href="cuba.html" class="sub-list-item">
+                    Cuba
+                  </a>
+                </li>
+                <li>
+                  <a href="indonesia.html" class="sub-list-item">
+                    Indonesia
+                  </a>
+                </li>
+                <li>
+                  <a href="fiji.html" class="sub-list-item">
+                    Fiji
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="index.html#Shop" class="list-item">
+                <span>Sklep</span>
+              </a>
+            </li>
+            <li>
+              <a href="contact.html" class="list-item">
+                <span>Kontakt</span>
+              </a>
+            </li>
+            <div class="header__location">
+              wrocław
+            </div>
           </ul>
-      </nav>
+        </nav>
       </div>
     </div>
-</section>
+  </section>
 
-<div class="map">
+  <div class="map">
     <div class="map-iframe">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2504.9124240763736!2d17.02799011596124!3d51.11007594749629!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470fc27505290393%3A0x36c138edd5a238df!2sRynek%208%2C%2050-529%20Wroc%C5%82aw!5e0!3m2!1sru!2spl!4v1584268985333!5m2!1sru!2spl"  frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2504.9124240763736!2d17.02799011596124!3d51.11007594749629!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470fc27505290393%3A0x36c138edd5a238df!2sRynek%208%2C%2050-529%20Wroc%C5%82aw!5e0!3m2!1sru!2spl!4v1584268985333!5m2!1sru!2spl"
+        frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </div>
     <div class="relax__arrows">
-        <a href="#Sport" class="animated fadeInDown infinite slower">
-            <img src="img/relax/down.png" alt="">
-        </a>
+      <a href="#Sport" class="animated fadeInDown infinite slower">
+        <img src="img/relax/down.png" alt="">
+      </a>
     </div>
     <div class="title">
-        <span>
-            Kontakt
-            <h3>Kontakt</h3>
-        </span>
+      <span>
+        Kontakt
+        <h3>Kontakt</h3>
+      </span>
     </div>
     <div class="map-info">
       <div class="map-wrapper">
         <div class="map-info__block">
           <div class="block__left">
-              <p> Rynek 8 <br>
-                  50-529 Wrocław <br>
-                  tel: 23 325 25 32 <br>
-                  travelshore@gmail.com
-              </p>
+            <p> Rynek 8 <br>
+              50-529 Wrocław <br>
+              tel: 23 325 25 32 <br>
+              travelshore@gmail.com
+            </p>
           </div>
           <div class="block__right">
             <p>Godziny otwarcia:<br>
               09:00 - 17:00<br>
             </p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="map-info__form">
+      <div class="map-info__form">
         <div class="wrap">
           <div class="contact-forms">
             <form action="#" method="post" id="mailForm">
-                <div class="contact-left">
-                  <div class="styled-input agile-styled-input-top">
-                      <input type="text" id="name" name="name" required="">
-                      <label>Imię</label>
-                      <span></span>
-                  </div>
-                    <div class="styled-input">
-                      <input type="email" id="email" name="email" required=""> 
-                      <label>Email</label>
-                      <span></span>
-                    </div> 
-                    <div class="styled-input">
-                      <input type="text" id="phone" name="phone" required="">
-                      <label>Numer telefonu</label>
-                      <span></span>
-                    </div>
-                  </div>
-                  <div class="contact-right">
-                  <div class="styled-input agileits-input">
-                    <textarea name="message"  id="message" required=""></textarea>
-                    <label>Wiadomość</label>
-                    <span></span>
-                <button type="button" id="send" class="button">wyślij</button>
+              <div class="contact-left">
+                <div class="styled-input agile-styled-input-top">
+                  <input type="text" id="name" name="name" required="">
+                  <label>Imię</label>
+                  <span></span>
+                </div>
+                <div class="styled-input">
+                  <input type="email" id="email" name="email" required="">
+                  <label>Email</label>
+                  <span></span>
+                </div>
+                <div class="styled-input">
+                  <input type="text" id="phone" name="phone" required="">
+                  <label>Numer telefonu</label>
+                  <span></span>
+                </div>
+              </div>
+              <div class="contact-right">
+                <div class="styled-input agileits-input">
+                  <textarea name="message" id="message" required=""></textarea>
+                  <label>Wiadomość</label>
+                  <span></span>
+                  <button type="button" id="send" class="button">wyślij</button>
             </form>
             <div id="error" class="error"></div>
           </div>
         </div>
+      </div>
     </div>
   </div>
-</div>
 
-       <!-- Footer -->
-   <footer class="footer" id="footer">
+  <!-- Footer -->
+  <footer class="footer" id="footer">
     <div class="footer-item">
       <a href="contact.html">Kontakt</a>
       <a href="about.html">O firmie</a>
     </div>
-      <div class="footer__cop">
-        © 2020 travel shore biuro podróży
-      </div>
-        <a href="index.html"><img src="img/footer/logofooter.png" alt=""></a>
+    <div class="footer__cop">
+      © 2020 travel shore biuro podróży
+    </div>
+    <a href="index.html"><img src="img/footer/logofooter.png" alt=""></a>
   </footer>
   <!-- Footer -->
 
@@ -195,4 +206,5 @@
   <script src="js/libs.min.js"></script>
   <script src="js/main.js"></script>
   <script src="js/formMail.js"></script>
+  <script src="js/loader.js"></script>
 </body>
